# StarSim

./: .gitignore  CLAUDE.md  INTEGRATION.md  INTEGRATION_ROADMAP.md  README.md  build.py  run_integration_demo.py  trading_universe.json
.claude/: settings.local.json
ParsecCore/: CMakeLists.txt  CMakeLists_minimal.txt  ConfigManager.cpp  EquationManager.cpp  IPlatform.h  MLCore.cpp  ML_README.md  MODULAR_ARCHITECTURE_SUMMARY.md  ParsecCore.cpp  ParsecCore.h  README.md  SCAFFOLD_SUMMARY.md  errors.md  main_ml_example.cpp  main_teensy.ino  main_windows.cpp
ParsecCore/examples/: ALPACA_SETUP_GUIDE.md  DEMO_INSTRUCTIONS.md  advanced_paper_trading.cpp  alpaca_integration.cpp  alpaca_simple.cpp  build_alpaca_integration.bat  input_manager_example.cpp  investment_strategy_guide.md  main_ml_example.cpp  main_windows.cpp  minimal_websocket_test.cpp  ml_config.json  quick_demo.cpp  run_alpaca_demo.py  setup_alpaca_api.py  setup_paper_trading.py  simple_paper_trading.cpp  trading_universe.json
ParsecCore/include/comms/: CommLayer.h
ParsecCore/include/mathcore/: BasicMath.h  LinearAlgebra.h  NumericalMethods.h  math.h
ParsecCore/include/mathcore/modules/: BasicMath.h  LinearAlgebra.h  Statistics.h
ParsecCore/include/mlcore/: DataCollection.h  MLCore.h  MLDataStructures.h
ParsecCore/include/mlcore/modules/: DataCollection.h  LinearRegression.h  PIDOptimizer.h
ParsecCore/include/parsec/: ConfigManager.h  EquationManager.h  InputManager.h  ModelConfig.h  OutputManager.h  ParsecCore.h  SolverCore.h  Variable.h
ParsecCore/include/physcore/: Controls.h  Dynamics.h  PhysCore.h  PhysicsConstants.h  PhysicsUtils.h  Statics.h  Thermofluids.h
ParsecCore/include/physcore/modules/: MaterialScience.h
ParsecCore/include/platform/: IPlatform.h
ParsecCore/include/timing/: TimingLayer.h
ParsecCore/include/tradingcore/: TradingCore.h  TradingDataStructures.h
ParsecCore/include/tradingcore/modules/: MarketData.h  PortfolioManager.h  SignalGenerator.h  SimulationEngine.h  TradeExecutor.h
ParsecCore/include/tradingcore/static/: TradingConstants.h
ParsecCore/src/mathcore/: math.cpp
ParsecCore/src/mathcore/modules/: BasicMath.cpp
ParsecCore/src/mlcore/: MLCore.cpp
ParsecCore/src/mlcore/modules/: MLCore.cpp
ParsecCore/src/parsec/: ConfigManager.cpp  InputManager.cpp  InputManager_correct.cpp  InputManager_simple.cpp  OutputManager.cpp  ParsecCore.cpp  SolverCore.cpp
ParsecCore/src/physcore/: PhysCore.cpp
ParsecCore/src/tradingcore/: TradingCore.cpp
ParsecCore/src/tradingcore/static/: TradingConstants.cpp
ParsecCore/tests/: config_manager_tests.cpp  math_tests.cpp  ml_config_example.json  solver_core_tests.cpp  test_model.starmodel.json  test_model_with_streams.starmodel.json  tradingcore_tests.cpp
Test/: main.cpp
examples/: input_manager_example.cpp
